[gd_scene load_steps=29 format=2]

[ext_resource path="res://audios/ogg/aweonao.ogg" type="AudioStream" id=1]
[ext_resource path="res://Node.gd" type="Script" id=2]
[ext_resource path="res://audios/ogg/ctm.ogg" type="AudioStream" id=3]
[ext_resource path="res://audios/ogg/chancho-culiao.ogg" type="AudioStream" id=4]
[ext_resource path="res://audios/ogg/ctmctm.ogg" type="AudioStream" id=5]
[ext_resource path="res://audios/ogg/weyno.ogg" type="AudioStream" id=6]
[ext_resource path="res://audios/ogg/Risitas.ogg" type="AudioStream" id=7]
[ext_resource path="res://audios/ogg/Chupame lo cocos vieja culia.ogg" type="AudioStream" id=8]
[ext_resource path="res://audios/ogg/Nosvimos.ogg" type="AudioStream" id=9]
[ext_resource path="res://audios/ogg/Hasta la proxima.ogg" type="AudioStream" id=10]
[ext_resource path="res://audios/ogg/Perreo Hijueputa.ogg" type="AudioStream" id=11]
[ext_resource path="res://audios/ogg/Yamete Kudasai Sound Effect (Original).ogg" type="AudioStream" id=12]
[ext_resource path="res://audios/ogg/roblox.ogg" type="AudioStream" id=13]
[ext_resource path="res://audios/ogg/Minecraft.ogg" type="AudioStream" id=14]
[ext_resource path="res://audios/ogg/YA ES MARTES a.ogg" type="AudioStream" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.309804, 0.545098, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.129412, 0.294118, 0.392157, 1 )

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.054902, 0.0941176, 0.105882, 1 )
grow_begin = 4.0

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="btnCtm" type="Button" parent="."]
margin_left = 24.0
margin_top = 16.8764
margin_right = 144.0
margin_bottom = 83.8764
custom_styles/normal = SubResource( 1 )
text = "CTM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioCtm" type="AudioStreamPlayer" parent="btnCtm"]
stream = ExtResource( 3 )
volume_db = 3.0

[node name="btnRoblox" type="Button" parent="."]
margin_left = 487.673
margin_top = 16.8764
margin_right = 607.673
margin_bottom = 83.8764
custom_styles/normal = SubResource( 1 )
text = "ROBLOX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioRoblox" type="AudioStreamPlayer" parent="btnRoblox"]
stream = ExtResource( 13 )
volume_db = 3.0

[node name="btnMinecraft" type="Button" parent="."]
margin_left = 487.673
margin_top = 128.0
margin_right = 607.673
margin_bottom = 195.0
custom_styles/normal = SubResource( 1 )
text = "MINECRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioMinecraft" type="AudioStreamPlayer" parent="btnMinecraft"]
stream = ExtResource( 14 )
volume_db = 3.0

[node name="btnMartes" type="Button" parent="."]
margin_left = 487.673
margin_top = 232.0
margin_right = 607.673
margin_bottom = 299.0
custom_styles/normal = SubResource( 1 )
text = "MARTES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioMartes" type="AudioStreamPlayer" parent="btnMartes"]
stream = ExtResource( 15 )
volume_db = -6.65

[node name="btnAweonao" type="Button" parent="."]
margin_left = 177.648
margin_top = 16.8764
margin_right = 297.648
margin_bottom = 83.8764
custom_styles/normal = SubResource( 2 )
text = "AWEONAO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioAweonaor" type="AudioStreamPlayer" parent="btnAweonao"]
stream = ExtResource( 1 )

[node name="btnChanchoKl" type="Button" parent="."]
margin_left = 331.755
margin_top = 16.8764
margin_right = 451.755
margin_bottom = 83.8764
custom_styles/normal = SubResource( 3 )
text = "CHANCO KL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioChanchoKl" type="AudioStreamPlayer" parent="btnChanchoKl"]
stream = ExtResource( 4 )
volume_db = -3.0

[node name="btnCtmCtm" type="Button" parent="."]
margin_left = 23.7836
margin_top = 128.0
margin_right = 143.784
margin_bottom = 195.0
custom_styles/normal = SubResource( 4 )
text = "CTMCTM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioCtmCtm" type="AudioStreamPlayer" parent="btnCtmCtm"]
stream = ExtResource( 5 )
volume_db = -3.0

[node name="btnWeyNoo" type="Button" parent="."]
margin_left = 177.648
margin_top = 128.0
margin_right = 297.648
margin_bottom = 195.0
custom_styles/normal = SubResource( 5 )
text = "WEY NOO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="auidioWeyNo" type="AudioStreamPlayer" parent="btnWeyNoo"]
stream = ExtResource( 6 )

[node name="btnRisas" type="Button" parent="."]
margin_left = 331.755
margin_top = 128.0
margin_right = 451.755
margin_bottom = 195.0
custom_styles/normal = SubResource( 6 )
text = "RISAS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioRisas" type="AudioStreamPlayer" parent="btnRisas"]
stream = ExtResource( 7 )
volume_db = 2.0

[node name="btnChupame" type="Button" parent="."]
margin_left = 24.0
margin_top = 232.0
margin_right = 144.0
margin_bottom = 299.0
custom_styles/normal = SubResource( 7 )
text = "CHUPAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioChupame" type="AudioStreamPlayer" parent="btnChupame"]
stream = ExtResource( 8 )
volume_db = -2.0

[node name="btnNosVimos" type="Button" parent="."]
margin_left = 177.648
margin_top = 232.0
margin_right = 300.648
margin_bottom = 292.0
rect_scale = Vector2( 0.972144, 1.1101 )
custom_styles/normal = SubResource( 8 )
text = "NOS VIMOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="auidioNosVImos" type="AudioStreamPlayer" parent="btnNosVimos"]
stream = ExtResource( 9 )
volume_db = -7.0

[node name="btnHastaProxima" type="Button" parent="."]
margin_left = 331.755
margin_top = 232.0
margin_right = 452.755
margin_bottom = 302.0
custom_styles/normal = SubResource( 9 )
text = "HASTA LA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioHastaProxima" type="AudioStreamPlayer" parent="btnHastaProxima"]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="btnJoPuta" type="Button" parent="."]
margin_left = 23.7836
margin_top = 330.569
margin_right = 143.784
margin_bottom = 397.569
custom_styles/normal = SubResource( 10 )
text = "JOPUTA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioJoPuta" type="AudioStreamPlayer" parent="btnJoPuta"]
stream = ExtResource( 11 )
volume_db = -4.0

[node name="btnYamete" type="Button" parent="."]
margin_left = 177.648
margin_top = 330.569
margin_right = 297.648
margin_bottom = 397.569
custom_styles/normal = SubResource( 11 )
text = "YAMETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioYamete" type="AudioStreamPlayer" parent="btnYamete"]
stream = ExtResource( 12 )
volume_db = -4.0

[node name="btnRamdon" type="Button" parent="."]
margin_left = 487.673
margin_top = 330.569
margin_right = 607.673
margin_bottom = 397.569
custom_styles/normal = SubResource( 11 )
text = "RAMDON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ramdon1" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 12 )
volume_db = -4.0

[node name="ramdon2" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 14 )
volume_db = 3.0

[node name="ramdon3" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 11 )
volume_db = -4.0

[node name="ramdon4" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="ramdon5" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 9 )
volume_db = -7.0

[node name="ramdon6" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 8 )
volume_db = -2.0

[node name="ramdon7" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 7 )
volume_db = 2.0

[node name="ramdon8" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 6 )

[node name="ramdon9" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 5 )
volume_db = -3.0

[node name="ramdon10" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 4 )
volume_db = -3.0

[node name="ramdon11" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 1 )

[node name="ramdon12" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 15 )
volume_db = -6.65

[node name="ramdon13" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 13 )
volume_db = 3.0

[node name="ramdon14" type="AudioStreamPlayer" parent="btnRamdon"]
stream = ExtResource( 3 )
volume_db = 3.0

[node name="btnStop" type="Button" parent="."]
margin_left = 331.755
margin_top = 330.569
margin_right = 451.755
margin_bottom = 397.569
custom_styles/normal = SubResource( 12 )
text = "stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
modulate = Color( 0.113725, 0.670588, 0.886275, 1 )
margin_left = 297.648
margin_top = 428.0
margin_right = 451.648
margin_bottom = 480.0
custom_styles/slider = SubResource( 13 )
min_value = -20.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 297.648
margin_top = 428.0
margin_right = 413.648
margin_bottom = 456.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volumen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 24.0
margin_top = 428.0
margin_right = 116.0
margin_bottom = 486.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "\"P\" REPRODUCE TODO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 24.0
margin_top = 456.0
margin_right = 168.0
margin_bottom = 514.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "\"k\" PAUSA TODO"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnCtm" to="." method="_on_btnCtm_pressed"]
[connection signal="pressed" from="btnRoblox" to="." method="_on_btnRoblox_pressed"]
[connection signal="pressed" from="btnMinecraft" to="." method="_on_btnMinecraft_pressed"]
[connection signal="pressed" from="btnMartes" to="." method="_on_btnMartes_pressed"]
[connection signal="pressed" from="btnAweonao" to="." method="_on_btnAweonao_pressed"]
[connection signal="pressed" from="btnChanchoKl" to="." method="_on_btnChanchoKl_pressed"]
[connection signal="pressed" from="btnCtmCtm" to="." method="_on_btnCtmCtm_pressed"]
[connection signal="pressed" from="btnWeyNoo" to="." method="_on_btnWeyNoo_pressed"]
[connection signal="pressed" from="btnRisas" to="." method="_on_btnRisas_pressed"]
[connection signal="pressed" from="btnChupame" to="." method="_on_btnChupame_pressed"]
[connection signal="pressed" from="btnNosVimos" to="." method="_on_btnNosVimos_pressed"]
[connection signal="pressed" from="btnHastaProxima" to="." method="_on_btnHastaProxima_pressed"]
[connection signal="pressed" from="btnJoPuta" to="." method="_on_btnJoPuta_pressed"]
[connection signal="pressed" from="btnYamete" to="." method="_on_btnYamete_pressed"]
[connection signal="pressed" from="btnRamdon" to="." method="_on_Ramdon_pressed"]
[connection signal="pressed" from="btnStop" to="." method="_on_btnStop_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
